<resources>
    <string name="app_name" translatable="false">Roger</string>
    <string name="offline_message">Waiting for network</string>
    <string name="offline_message_talk_screen">You can still talk while offline</string>
    <string name="wait_generic">Please wait…</string>
    <string name="error_generic_title">Oops!</string>
    <string name="error_generic_403">Error: Already in use</string>
    <string name="error_wrong_code">Wrong code</string>
    <string name="active_on_roger">Active on Roger</string>
    <string name="on_roger">on Roger</string>
    <string name="hasnt_joined">Hasn\'t joined yet</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_person">Someone</string>
    <string name="default_group_name">Roger Conversation</string>
    <string name="you">You</string>
    <string name="audio_playback_speed_cant_change">Cannot change speed if not playing</string>
    <string name="placeholder_name">Full Name</string>
    <string name="overlay_add_conversations">This is how you start conversations. Go ahead and tap it.</string>
    <string name="overlay_tap_to_listen">Tap or raise to your ear like a phone call to listen</string>
    <string name="overlay_tap_to_talk">Tap and say "Hello"</string>
    <string name="overlay_manage_conversation">Here\'s an easy to way to create and manage group conversations.</string>
    <string name="overlay_later">Later</string>
    <string name="recording_failed_adjusting">Recording failed, we\'re adjusting settings to your device. Please try again.</string>
    <string name="invitation_subject">I\'m talking with you on Roger</string>
    <string name="invitation_message">Talk with me on Roger</string>
    <string name="invitation_message_open_group">Talk with me on Roger</string>
    <string name="invitation_send_email_chooser">I\'ve added you to %1$s conversation on the Roger app. Use this link to join it!</string>
    <string name="get_started_title">What\'s your number?</string>
    <string name="get_started">get started</string>
    <string name="button_confirm_number">confirm number</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="toggle_login_use_email">Or use an email address</string>
    <string name="toggle_login_use_phone">Or a phone number</string>
    <string name="wait_for_call">You should receive a call momentarily.</string>
    <string name="wait_before_call">You must wait %1$s more seconds before requesting a phone call.</string>
    <string name="ob_roger_slogan_part1" translatable="false">Roger.</string>
    <string name="ob_roger_slogan_part2">| Talk more often</string>
    <string name="ob_ready_question">Ready to start talking?</string>
    <string name="verification_code_description">We sent you a code\nat %1$s.</string>
    <string name="call_me_instead">CALL ME INSTEAD</string>
    <string name="bots_picker_title">Connect</string>
    <string name="bots_lobby_title">Bots</string>
    <string name="bots_ownership">%1$s\'s %2$s</string>
    <string name="hello_primer">Hello %1$s,</string>
    <string name="primer_subtitle">Ready to start your first conversation?</string>
    <string name="invite_conversation_element">Invite</string>
    <string name="invite_title_cta">Invite %1$s to this conversation!</string>
    <string name="invite_button">invite</string>
    <string name="skip_button">skip</string>
    <string name="no_more_invites">All done</string>
    <string name="invite_all">Invite all your contacts</string>
    <string name="glimpses_intro_title">How\'s the weather?</string>
    <string name="glimpses_enable">Show weather</string>
    <string name="glimpses_intro_description">Display location, weather, and\nlocal time for conversations.</string>
    <string name="glimpses_button">enable location</string>
    <string name="glimpses_button_dismiss">Later</string>
    <string name="glimpses_failed_to_update">Account update failed. Please try again.</string>
    <string name="glimpses_permission_title">Location</string>
    <string name="glimpses_permission_description">Roger needs to get access to your location from time to time</string>
    <string name="glimpses_cloudy">Cloudy</string>
    <string name="glimpses_fog">Fog</string>
    <string name="glimpses_partly_cloudy">Partly cloudy</string>
    <string name="glimpses_rain">Rain</string>
    <string name="glimpses_sleet">Sleet</string>
    <string name="glimpses_snow">Snow</string>
    <string name="glimpses_wind">Wind</string>
    <string name="glimpses_clear">Clear</string>
    <string name="glimpses_night">Night</string>
    <string name="ob_failed_request">Failed request</string>
    <string name="ob_wrong_code">That doesn\'t look like the code we sent</string>
    <string name="ob_wrong_phone_number">That doesn\'t look like a phone number </string>
    <string name="ob_phone_number_empty">Make sure you have a phone number</string>
    <string name="name_query_title">What\'s your name?</string>
    <string name="name_query_desc">Make it easy for friends to find you.</string>
    <string name="confirm_name">that\'s me</string>
    <string name="contacts_title">Contacts</string>
    <string name="contact_via">via</string>
    <string name="contact_permission_title">Talk with your favorite people</string>
    <string name="contact_permission_description">Access your contacts to get started.</string>
    <string name="invite_other_options">Other sharing options</string>
    <string name="invite_send_button_label">send it</string>
    <string name="invite_send_via_sms_button_label">send it via sms</string>
    <string name="invite_start_conversation_description">Invite %1$s \nto this conversation</string>
    <string name="invite_start_conversation_sub">(They dont\'t need Roger to listen)</string>
    <string name="invite_open_group_main">Invite link for \n%1$s conversation</string>
    <string name="th_tap_to_stop_recording">Tap to stop recording</string>
    <string name="th_tap_to_start_recording">Double-Tap to start recording</string>
    <string name="th_tap_to_play">Tap to play</string>
    <string name="th_tap_to_stop">Tap to stop</string>
    <string name="th_notification_title">TalkHeads are active</string>
    <string name="th_notification_description">Press here to easily re-open Roger.</string>
    <string name="recent">Recent</string>
    <string name="tap_to_play">tap here to listen</string>
    <string name="people_button">People</string>
    <string name="settings_button">Settings</string>
    <string name="tooltip_mic_access">Allow microphone access</string>
    <string name="tooltip_tap_finish_talking">Tap to finish talking</string>
    <string name="tooltip_tap_talk">Tap to talk</string>
    <string name="tooltip_tap_to_listen">Tap to listen</string>
    <string name="tooltip_raise_to_listen">Tap to listen or raise to\near like a phone call</string>
    <string name="contact_add_element">Add</string>
    <string name="raise_to_listen_private">Raise to listen privately</string>
    <string name="talk_screen_new_conversation">New Conversation</string>
    <string name="talk_screen_live_playback_notice">Live Playback On</string>
    <string name="talk_screen_speaking_with">Talking to %1$s</string>
    <string name="talk_screen_speak_close">Speak close to the microphone</string>
    <string name="talk_screen_conversations_label">Convos</string>
    <string name="talk_screen_talk_label">Talk</string>
    <string name="talk_screen_members_label">Members</string>
    <string name="talk_screen_new_conversation_label">New</string>
    <string name="talk_screen_rewind_label">Rewind</string>
    <string name="talk_screen_speed_label">Speed</string>
    <string name="talk_screen_skip_label">Skip</string>
    <string name="talk_screen_share_label">Share</string>
    <string name="talk_screen_buzz_label">Buzz</string>
    <string name="error_cannot_hide_single_conversation">You cannot hide just one conversation.</string>
    <string name="contact_options_set_name">Set Name</string>
    <string name="contact_options_set_name_title">Set Conversation Name</string>
    <string name="contact_options_share_profile">Share This Profile</string>
    <string name="contact_options_share_profile_copy">Talk with %1$s on Roger</string>
    <string name="contact_options_add_people">Add members</string>
    <string name="contact_options_remove_people">remove</string>
    <string name="contact_options_share_open_group">Invite People</string>
    <string name="contact_options_more">More</string>
    <string name="contact_options_mute_group">Mute</string>
    <string name="contact_options_unmute_group">Unmute</string>
    <string name="contact_options_leave_group">Leave Conversation</string>
    <string name="contact_options_set_name_before_add_people">You must set a name for the conversation before adding people.</string>
    <string name="contact_options_leave_group_title">Are you sure you want to leave %1$s?</string>
    <string name="contact_options_mute_duration_8_hours">8 Hours</string>
    <string name="contact_options_mute_duration_week">1 Week</string>
    <string name="contact_options_pick_mute_duration_title">For how long do you wish to mute?</string>
    <string name="contact_options_members">Members</string>
    <string name="contact_options_start_talkhead">Start TalkHead</string>
    <string name="attachments_send_media_title">Send Media</string>
    <string name="attachments_media_link_from_clipboard">Link from Clipboard</string>
    <string name="attachments_photo">Photo</string>
    <string name="matching_explanation">You will be able to see which of your contacts are already on Roger, and invite the ones who aren\'t!</string>
    <string name="matching_explanation_2">This verification will be fully encrypted and we won\'t spam, store or share your contacts in any way.</string>
    <string name="matching_title">Access Contacts</string>
    <string name="matching_ok">OK</string>
    <string name="matching_cancel">Take me back</string>
    <string name="feedback_title">feedback &amp; help</string>
    <string name="your_account_title">Your account</string>
    <string name="services_title">Services</string>
    <string name="username_title">Handle</string>
    <string name="settings_permissions_title">permissions</string>
    <string name="settings_adding_accounts">Adding accounts helps friends find you.</string>
    <string name="username_unset_explanation_prefix">Friends can reach you via your username.</string>
    <string name="email_us">Email us</string>
    <string name="rate_us">Rate us on the Play Store</string>
    <string name="settings_add_photo">ADD\nPHOTO</string>
    <string name="settings_add_username">Add username</string>
    <string name="settings_add_additional_contact">Add additional contact info</string>
    <string name="settings_invite">Invite people to talk</string>
    <string name="settings_glimpses_toggle">Weather</string>
    <string name="settings_glimpses_description">Location, weather, and time for contacts.</string>
    <string name="settings_live_label">LivePlay</string>
    <string name="settings_live_description">Auto play conversations</string>
    <string name="settings_talkhead_label">TalkHeads</string>
    <string name="settings_talkhead_description">Use Roger alongside other apps</string>
    <string name="settings_about_header">about</string>
    <string name="settings_whats_new">What\'s new</string>
    <string name="settings_faq">Frequently Asked Questions</string>
    <string name="settings_credits">Credits</string>
    <string name="settings_advanced">Advanced</string>
    <string name="landing_welcome_to_roger">Welcome to Roger</string>
    <string name="landing_welcome_message">A free voice messenger for friends, families and teams who miss talking.</string>
    <string name="landing_welcome_description">By continuing you agree to our Terms of Service</string>
</resources>