<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night_gradient_bg"
    android:gravity="center"
    android:orientation="vertical">

        <!-- Welcome Message -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/opaque_white"
                style="@style/StyleGuideText.Headline"
                android:text="@string/glimpses_intro_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textColor="@color/white_60"
                style="@style/StyleGuideText.Title"
                android:maxLines="2"
                android:text="@string/glimpses_intro_description" />

        </LinearLayout>

        <!-- Footer -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:gravity="center">


            <com.rogertalk.roger.ui.view.BlueButton
                android:id="@+id/enableLocationBtn"
                style="@style/OnBoardingButton.Blue"
                android:layout_width="match_parent"
                android:layout_height="@dimen/on_boarding_button_height"
                android:layout_marginTop="5dp"
                android:text="@string/glimpses_button"
                android:theme="@style/OnBoardingButton.Blue" />

            <TextView
                android:id="@+id/laterBtn"
                style="@style/StyleGuideText.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_60"
                android:padding="4dp"
                android:text="@string/glimpses_button_dismiss" />

        </LinearLayout>

    </LinearLayout>
